resources/tests/invalid_syntax/fn_ret_type.ct
//`Type of return value (u64) does not match function return type (i64)!
//1
fn hello()->i64 {
  return 10u64;
}